--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-scripts": "5.0.1",
+    "react-world-flags": "^1.6.0",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "web-vitals": "^2.1.4"
