feat: add MongoDB integration, RAG pipeline, and chat background customization
- Connect backend to MongoDB for storing docs, embeddings, and chat history
- Implement Retrieval-Augmented Generation (RAG) pipeline with chunking and semantic search
- Add message memory and context window management in MongoDB
- Allow users to upload custom chat backgrounds (with localStorage persistence)
- Modernize Messenger UI: improved chat input, dark mode readability, and WhatsApp-style message background overlay
- Add file/image upload logic and header controls for personalization
- General bugfixes and improved error handling throughout proxy and frontend

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "gpt-3-encoder": "^1.1.4",
+    "langchain": "^0.3.30",
+    "lucide-react": "^0.533.0",
+    "mongoose": "^8.16.5",
     "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
