--- a/package.json
+++ b/package.json
@@ -49,5 +49,6 @@
   },
   "devDependencies": {
     "http-proxy-middleware": "^3.0.5"
-  }
+  },
+  "proxy": "https://afaa5cc4970c.ngrok-free.app"
 }
