--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:proxy": "node proxy/proxy-server.js",
+    "dev": "concurrently \"npm start\" \"npm run start:proxy\""
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^9.2.0",
     "http-proxy-middleware": "^3.0.5"
   },
   "proxy": "https://afaa5cc4970c.ngrok-free.app"
