--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-world-flags": "^1.6.0",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
+    "sass": "^1.89.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
